--- a/CreateWorkItems.yml
+++ b/CreateWorkItems.yml
@@ -51,7 +51,7 @@ steps:
       Authentication="anything:$API_CREDENTIALS"
       splitter="*"
       tableBorders="style=\\\"border: 1px solid black\\\""
-      tableContent="stule\\\"bold\\\""
+      boldContent="style=\\\"font-weight: bold\\\""
       
       declare -a VulnerableMethods
       methodIndex=0
@@ -80,9 +80,9 @@ steps:
               callee=$( jq -r  '.callee.className' <<< "${callChainLinkAsJson}" ).$( jq -r  '.callee.methodName' <<< "${callChainLinkAsJson}" )$( jq -r  '.callee.descriptor' <<< "${callChainLinkAsJson}" )
               if [[ $innerCallChain == "" ]]; then 
                 caller=$( jq -r  '.caller.className' <<< "${callChainLinkAsJson}" ).$( jq -r  '.caller.methodName' <<< "${callChainLinkAsJson}" )$( jq -r  '.caller.descriptor' <<< "${callChainLinkAsJson}" )            
-                innerCallChain="<tr $tableBorders><td>${{ parameters.Starting_At_Name }}: </td><td $tableContent>$caller</td></tr>"
+                innerCallChain="<tr $tableBorders><td>${{ parameters.Starting_At_Name }}: </td><td $boldContent>$caller</td></tr>"
               fi              
-              innerCallChain="$innerCallChain<tr $tableBorders><td $tableContent>${{ parameters.Calling_Name }}: </td> <td $tableContent>$callee</td></tr> <tr $tableBorders><td $tableContent>${{ parameters.At_Line_Name }} "$( jq -r  '.lineNumber' <<< "${callChainLinkAsJson}" )"</td></tr>"
+              innerCallChain="$innerCallChain<tr $tableBorders><td>${{ parameters.Calling_Name }}: </td> <td $boldContent>$callee</td></tr> <tr $tableBorders><td $tableContent>${{ parameters.At_Line_Name }} "$( jq -r  '.lineNumber' <<< "${callChainLinkAsJson}" )"</td></tr>"
             done
             callChain=$callChain$innerCallChain"</table>"
             let "callNumber++"
