--- a/Veracode-Scans.yml
+++ b/Veracode-Scans.yml
@@ -48,3 +48,20 @@ steps:
     area: '$(system.teamProject)'
     flawImportLimit: '1000'
 
+- task: CmdLine@2
+  name: PipelineScan
+  env:
+    VID: $(VERACODE_ID)
+    VKEY: $(VERACODE_KEY)
+  inputs:
+    script: |
+      curl -O https://downloads.veracode.com/securityscan/pipeline-scan-LATEST.zip
+      unzip pipeline-scan-LATEST.zip pipeline-scan.jar
+      java -jar pipeline-scan.jar
+      --veracode_api_id "${VID}"
+      --veracode_api_key "${VKEY}"
+      --file ./target/verademo.war
+      --project_name "Verademo ADO"
+      --fail_on_severity "Very High, High"
+      --issue_details "true"
+    
