Update Veracode-Scans.yml for Azure Pipelines

--- a/Veracode-Scans.yml
+++ b/Veracode-Scans.yml
@@ -35,6 +35,7 @@ steps:
     veracodeAppProfile: 'Verademo ADO'
     version: '$(build.buildNumber)'
     filepath: './target/verademo.war'
+    importResults: true
     maximumWaitTime: '360'
 
 
