--- a/On-Merge.yml
+++ b/On-Merge.yml
@@ -30,6 +30,30 @@ steps:
   inputs:
     script: 'curl -sSL  https://download.sourceclear.com/ci.sh | sh'
 
+- task: CmdLine@2
+  name: CleanDirectory
+  inputs:
+    script: git stash
+
+- task: CmdLine@2
+  name: PipelineScan
+  env:
+    VID: $(VERACODE_ID)
+    VKEY: $(VERACODE_KEY)
+  inputs:
+    script: |
+      curl -O https://downloads.veracode.com/securityscan/pipeline-scan-LATEST.zip
+      unzip pipeline-scan-LATEST.zip pipeline-scan.jar
+      java -jar pipeline-scan.jar --veracode_api_id "${VID}" --veracode_api_key "${VKEY}" --file ./target/verademo.war --project_name "Verademo ADO" --json_output_file "pipeline_baseline.json" --fail_on_severity "" --issue_details "true"
+
+- task: CmdLine@2
+  name: CommitBaseline
+  inputs:
+    script: |
+      git add pipeline_baseline.json
+      git commit -m "Updating baseline file from Azure"
+      git push
+
 - task: Veracode@3
   inputs:
     ConnectionDetailsSelection: 'Endpoint'
