--- a/On-Merge.yml
+++ b/On-Merge.yml
@@ -66,7 +66,6 @@ steps:
     importResults: true
     maximumWaitTime: '360'
 
-
 - task: Veracode Flaw Importer@3
   inputs:
     ConnectionDetailsSelection: 'Endpoint'
@@ -74,5 +73,6 @@ steps:
     veracodeAppProfile: 'Verademo ADO'
     sandboxName: 'Release Candidate'
     importType: 'All Unmitigated Flaws Violating Policy'
+    workItemType: 'Task'
     area: '$(system.teamProject)'
     flawImportLimit: '1000'
