Adding SCA flaw importing

--- a/On-Merge.yml
+++ b/On-Merge.yml
@@ -28,7 +28,15 @@ steps:
   env:
     SRCCLR_API_TOKEN: $(SCA_TOKEN)
   inputs:
-    script: 'curl -sSL  https://download.sourceclear.com/ci.sh | sh'
+    script: 'curl -sSL  https://download.sourceclear.com/ci.sh | SRCCLR_CI_JSON=1 sh > sca_output.json'
+
+- template : CreateWorkItems.yml  
+  parameters:
+    json_file: 'sca_output.json'
+    issue_type: 'Issue'
+    organization: 'rpereira0294'
+    project_name: 'Test%20Project'
+
 
 - task: CmdLine@2
   name: CleanDirectory
