--- a/On-Merge.yml
+++ b/On-Merge.yml
@@ -60,6 +60,8 @@ steps:
   name: CommitBaseline
   inputs:
     script: |
+      git status
+      git branch
       git config --global user.email "ricardoapjunior@hotmail.com"
       git config --global user.name cadonuno
       git add pipeline_baseline.json
