--- a/On-Merge.yml
+++ b/On-Merge.yml
@@ -12,6 +12,10 @@ pool:
   vmImage: ubuntu-latest
 
 steps:
+- checkout: self
+  persistCredentials: true
+  clean: true
+
 - task: Maven@3
   inputs:
     mavenPomFile: 'pom.xml'
@@ -41,7 +45,6 @@ steps:
   name: CleanDirectory
   inputs:
     script: |
-      git status
       git stash
       git checkout develop
 
@@ -60,13 +63,11 @@ steps:
   name: CommitBaseline
   inputs:
     script: |
-      git status
-      git branch
       git config --global user.email "ricardoapjunior@hotmail.com"
       git config --global user.name cadonuno
       git config --global url."git@github.com:".insteadOf "https://github.com/"
       git add pipeline_baseline.json
-      git commit -m "Updating baseline file from Azure"
+      git commit -m "Updating baseline file from Azure [skip ci]"
       git push
 
 - task: Veracode@3
