--- a/On-Merge.yml
+++ b/On-Merge.yml
@@ -63,6 +63,8 @@ steps:
   name: CommitBaseline
   inputs:
     script: |      
+      git config --global user.email "ricardoapjunior@hotmail.com"
+      git config --global user.name "cadonuno"
       git add pipeline_baseline.json
       git commit -m "Updating baseline file from Azure [skip ci]"
       git push
