--- a/Scheduled.yml
+++ b/Scheduled.yml
@@ -36,9 +36,10 @@ steps:
   inputs:
     ConnectionDetailsSelection: 'Endpoint'
     AnalysisService: 'Veracode Analysis Center'
-    veracodeAppProfile: 'Verademo ADO'
+    veracodeAppProfile: 'Verademo ADO 2'
     version: 'ADO Scheduled Scan: $(build.buildNumber)'
     filepath: './target/verademo.war'
+    createProfile: true
     maximumWaitTime: '360'
 
 
