Update Scheduled.yml for Azure Pipelines

--- a/Scheduled.yml
+++ b/Scheduled.yml
@@ -39,7 +39,7 @@ steps:
     veracodeAppProfile: 'Verademo ADO '
     version: 'ADO Scheduled Scan: $(build.buildNumber)'
     filepath: './target/verademo.war'
-    optargs: '-policy "High for SCA with 30 day Grace"'
+    optargs: "-policy 'High for SCA with 30 day Grace'"
     createProfile: true
     maximumWaitTime: '360'
 
