--- a/CreateWorkItems.yml
+++ b/CreateWorkItems.yml
@@ -48,6 +48,7 @@ steps:
     script: |      
       if [[ $API_CREDENTIALS == '$(AZURE_API_CREDENTIALS)' ]] ; then
         echo "Missing AZURE_API_CREDENTIALS environment variable. AZURE_API_CREDENTIALS must be set to import SCA results into Work Items."
+        exit 2
       else 
         createApiUrl="${{ parameters.Azure_Base_Directory }}/${{ parameters.organization }}/${{ parameters.project_name }}/_apis/wit/workitems/"'$'"${{ parameters.issue_type }}?api-version=6.0"
         getWorkItemApiUrl="${{ parameters.Azure_Base_Directory }}/${{ parameters.organization }}/${{ parameters.project_name }}/_apis/wit/wiql?api-version=6.1-preview.2"
