--- a/CreateWorkItems.yml
+++ b/CreateWorkItems.yml
@@ -48,9 +48,9 @@ steps:
     VULNERABLE_METHODS_AS_JSON:  $(ReadJsonFile.VULNERABLE_METHODS_AS_JSON)
   inputs:
     script: |
-      expected_blank_credentials="$(AZURE_API"
-      expected_blank_credentials=$expected_blank_credentials"_CREDENTIALS"
-      if [[ $API_CREDENTIALS == "$expected_blank_credentials)" ]]; then 
+      expected_blank_credentials='$'"(AZURE_API_CREDENTIALS)"
+      echo $expected_brank_credentials
+      if [[ $API_CREDENTIALS == "$expected_blank_credentials" ]]; then 
         echo "Missing AZURE_API_CREDENTIALS environment variable. AZURE_API_CREDENTIALS must be set to import SCA results into Work Items."
         exit 2
       else 
