--- a/ApiWrapperScan.yml
+++ b/ApiWrapperScan.yml
@@ -10,13 +10,22 @@ pool:
   vmImage: ubuntu-latest
 
 steps:
+
+- task: CmdLine@2
+  name: DownloadScanner
+  inputs:
+    script: curl https://search.maven.org/remotecontent?filepath=com/veracode/vosp/api/wrappers/vosp-api-wrappers-java/21.9.8.2/vosp-api-wrappers-java-21.9.8.2-dist.zip -o api-wrapper.zip 
+  
+
+- task: ExtractFiles@1
+  inputs:
+    archiveFilePatterns: '**/*.zip' 
+    destinationFolder: ./
+
 - task: CmdLine@2
   name: UploadAndScan
   env:
     VID: $(VERACODE_ID)
     VKEY: $(VERACODE_KEY)
   inputs:
-    script:  |
-      curl https://search.maven.org/remotecontent?filepath=com/veracode/vosp/api/wrappers/vosp-api-wrappers-java/21.9.8.2/vosp-api-wrappers-java-21.9.8.2-dist.zip -o api-wrapper.zip
-      unzip ./api-wrapper.zip
-      java -jar VeracodeJavaAPI.jar -vid "${VID}" -vkey "${VKEY}" -action uploadandscan -version "$(build.buildNumber)" -outputfilepath "uploadAndScanResult.xml"    
+    script: java -jar VeracodeJavaAPI.jar -vid "${VID}" -vkey "${VKEY}" -action uploadandscan -version "$(build.buildNumber)" -outputfilepath "uploadAndScanResult.xml"    
