--- a/ApiWrapperScan.yml
+++ b/ApiWrapperScan.yml
@@ -14,7 +14,9 @@ steps:
 - task: CmdLine@2
   name: DownloadScanner
   inputs:
-    script: curl https://search.maven.org/remotecontent?filepath=com/veracode/vosp/api/wrappers/vosp-api-wrappers-java/21.9.8.2/vosp-api-wrappers-java-21.9.8.2-dist.zip -o api-wrapper.zip 
+    script: |
+      curl https://search.maven.org/remotecontent?filepath=com/veracode/vosp/api/wrappers/vosp-api-wrappers-java/21.9.8.2/vosp-api-wrappers-java-21.9.8.2-dist.zip -o api-wrapper.zip 
+      chmod 777 api-wrapper.zip 
   
 
 - task: ExtractFiles@1
@@ -22,10 +24,21 @@ steps:
     archiveFilePatterns: '**/*.zip' 
     destinationFolder: ./
 
+- task: Maven@3
+  inputs:
+    mavenPomFile: 'pom.xml'
+    mavenOptions: '-Xmx3072m'
+    javaHomeOption: 'JDKVersion'
+    jdkVersionOption: '1.8'
+    jdkArchitectureOption: 'x64'
+    publishJUnitResults: true
+    testResultsFiles: '**/surefire-reports/TEST-*.xml'
+    goals: 'package'
+
 - task: CmdLine@2
   name: UploadAndScan
   env:
     VID: $(VERACODE_ID)
     VKEY: $(VERACODE_KEY)
   inputs:
-    script: java -jar VeracodeJavaAPI.jar -vid "${VID}" -vkey "${VKEY}" -action uploadandscan -version "$(build.buildNumber)" -outputfilepath "uploadAndScanResult.xml"    
+    script: java -jar VeracodeJavaAPI.jar -vid "${VID}" -vkey "${VKEY}" -action uploadandscan -filePath "./target/verademo.war" -version "$(build.buildNumber)" -outputfilepath "uploadAndScanResult.xml"    
