Update ApiWrapperScan.yml for Azure Pipelines

--- a/ApiWrapperScan.yml
+++ b/ApiWrapperScan.yml
@@ -22,7 +22,7 @@ steps:
 - task: ExtractFiles@1
   inputs:
     archiveFilePatterns: '**/*.zip' 
-    destinationFolder: ./
+    destinationFolder: ./destination
 
 - task: Maven@3
   inputs:
