--- a/Scheduled.yml
+++ b/Scheduled.yml
@@ -30,7 +30,7 @@ steps:
   env:
     SRCCLR_API_TOKEN: $(SCA_TOKEN)
   inputs:
-    script: 'curl -sSL  https://download.sourceclear.com/ci.sh | sh'
+    script: 'curl -sSL  https://download.sourceclear.com/ci.sh | sh || true'
 
 - task: Veracode@3
   inputs:
