Update pre-merge.yml for Azure Pipelines

--- a/pre-merge.yml
+++ b/pre-merge.yml
@@ -26,6 +26,12 @@ steps:
     testResultsFiles: '**/surefire-reports/TEST-*.xml'
     goals: 'package'
 
+- task: CmdLine@2
+  name: SCAScan
+  env:
+    SRCCLR_API_TOKEN: $(SCA_TOKEN)
+  inputs:
+    script: 'curl -sSL  https://download.sourceclear.com/ci.sh | sh || true'
 
 - task: CmdLine@2
   name: PipelineScan
