--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,6 +5,16 @@ pool:
   vmImage: ubuntu-latest
 
 steps:
+- task: Maven@3
+  inputs:
+    mavenPomFile: 'pom.xml'
+    mavenOptions: '-Xmx3072m'
+    javaHomeOption: 'JDKVersion'
+    jdkVersionOption: '1.8'
+    jdkArchitectureOption: 'x64'
+    publishJUnitResults: true
+    testResultsFiles: '**/surefire-reports/TEST-*.xml'
+    goals: 'package'
 - task: CmdLine@2
   name: PipelineScan
   env:
