--- a/pre-merge.yml
+++ b/pre-merge.yml
@@ -43,6 +43,13 @@ steps:
         curl -O https://downloads.veracode.com/securityscan/pipeline-scan-LATEST.zip
         unzip pipeline-scan-LATEST.zip pipeline-scan.jar     
         java -jar pipeline-scan.jar --veracode_api_id "${VID}" --veracode_api_key "${VKEY}" --file ./target/verademo.war --project_name "Verademo ADO" --fail_on_severity "Very High, High" --issue_details "true" --baseline_file "pipeline_baseline.json"
+
+  - task: CmdLine@2
+    name: SavePipelineScanAsHtmlAndXml
+    condition:
+      succeededOrFailed()
+    inputs:
+      script: |
         echo Saving results as xml and html
         curl -sSO https://raw.githubusercontent.com/cadonuno/pipeline2detailedreport/master/detailedreport.py 
         python detailedreport.py --html
@@ -50,19 +57,27 @@ steps:
         echo Finished saving results
   
   - task: PublishBuildArtifacts@1
+    condition:
+        succeededOrFailed()
     inputs:
       pathToPublish: 'pipeline-report.html'
-      artifactName: drop
+      artifactName: pipeline-result
 
   - task: PublishBuildArtifacts@1
+    condition:
+      succeededOrFailed()
     inputs:
       pathToPublish: 'pipeline-report-filtered.html'
-      artifactName: drop
+      artifactName: pipeline-result
   - task: PublishBuildArtifacts@1
+    condition:
+      succeededOrFailed()
     inputs:
       pathToPublish: 'detailed_report.xml'
-      artifactName: drop
+      artifactName: pipeline-result
   - task: PublishBuildArtifacts@1
+    condition:
+      succeededOrFailed()
     inputs:
       pathToPublish: 'detailed_report_filtered.xml'
-      artifactName: drop
+      artifactName: pipeline-result
