--- a/pre-merge.yml
+++ b/pre-merge.yml
@@ -42,7 +42,7 @@ steps:
       script: |
         curl -O https://downloads.veracode.com/securityscan/pipeline-scan-LATEST.zip
         unzip pipeline-scan-LATEST.zip pipeline-scan.jar     
-        java -jar pipeline-scan.jar --veracode_api_id "${VID}" --veracode_api_key "${VKEY}" --file ./target/verademo.war --project_name "Verademo ADO" --fail_on_severity "Very High, High" --issue_details "true" --baseline_file "pipeline_baseline.json" --json_output_file "test.json"
+        java -jar pipeline-scan.jar --veracode_api_id "${VID}" --veracode_api_key "${VKEY}" --file ./target/verademo.war --project_name "Verademo ADO" --fail_on_severity "Very High, High" --issue_details "true" --baseline_file "pipeline_baseline.json" --json_output_file "test.json";
 
   - task: CmdLine@2
     name: SavePipelineScanAsHtmlAndXml
