--- a/pre-merge.yml
+++ b/pre-merge.yml
@@ -42,14 +42,19 @@ steps:
       script: |
         curl -O https://downloads.veracode.com/securityscan/pipeline-scan-LATEST.zip
         unzip pipeline-scan-LATEST.zip pipeline-scan.jar
+        java -jar pipeline-scan.jar --veracode_api_id "${VID}" --veracode_api_key "${VKEY}" --file ./target/verademo.war --project_name "Verademo ADO" --fail_on_severity "Very High, High" --issue_details "true" --baseline_file "pipeline_baseline.json"
+      failOnStderr: true
+        
+  - task: CmdLine@2
+    name: SaveResultsAsHtmlAndXml
+    inputs:
+      script: |
         echo Saving results as xml and html
         curl -sSO https://raw.githubusercontent.com/cadonuno/pipeline2detailedreport/master/detailedreport.py 
         python detailedreport.py --html
         python detailedreport.py --html --html_name "pipeline-report-filtered.html" --xml_name "detailed_report_filtered.xml" -f filtered_results.json
         echo Finished saving results
-      failOnStderr: true
-        
-  
+
   - task: PublishBuildArtifacts@1
     condition:
         succeededOrFailed()
