Update contariner-scan-ado.yml for Azure Pipelines

--- a/contariner-scan-ado.yml
+++ b/contariner-scan-ado.yml
@@ -23,20 +23,20 @@ steps:
   - task: CmdLine@2
     name: ScanImage
     inputs:
-      script: 'veracode scan --source  juliantotzek/verademo1-tomcat --type image --output scan-verademo.json --format json'
+      script: './veracode scan --source  juliantotzek/verademo1-tomcat --type image --output scan-verademo.json --format json'
 
   - task: CmdLine@2
     name: ScanIac
     inputs:
-      script: 'veracode scan --source https://github.com/bridgecrewio/terragoat --type repo --output iac.json --format json'    
+      script: './veracode scan --source https://github.com/bridgecrewio/terragoat --type repo --output iac.json --format json'    
 
   - task: CmdLine@2
     name: ScanDirectory
     inputs:
-      script: 'veracode scan --source insecure-test --type directory --output directory.json --format json'    
+      script: './veracode scan --source insecure-test --type directory --output directory.json --format json'    
 
   - task: CmdLine@2
     name: MakeSbom
     inputs:
-      script: 'veracode sbom --source https://github.com/veracode/verademo --type repo --output repo-sbom-cyclondx.json --format cyclonedx-json'    
+      script: './veracode sbom --source https://github.com/veracode/verademo --type repo --output repo-sbom-cyclondx.json --format cyclonedx-json'    
 
