--- a/contariner-scan-ado.yml
+++ b/contariner-scan-ado.yml
@@ -19,25 +19,64 @@ steps:
       script: |
         curl -fsS https://tools.veracode.com/veracode-cli/install | sh
         ./veracode configure
-        ./veracode scan --source  juliantotzek/verademo1-tomcat --type image --output scan-verademo.json --format json
 
   - task: CmdLine@2
     name: ScanImage
+    env:
+      VERACODE_API_KEY_ID: $(VERACODE_ID)
+      VERACODE_API_KEY_SECRET: $(VERACODE_SECRET)
     inputs:
       script: './veracode scan --source  juliantotzek/verademo1-tomcat --type image --output scan-verademo.json --format json'
 
   - task: CmdLine@2
     name: ScanIac
+    env:
+      VERACODE_API_KEY_ID: $(VERACODE_ID)
+      VERACODE_API_KEY_SECRET: $(VERACODE_SECRET)
     inputs:
       script: './veracode scan --source https://github.com/bridgecrewio/terragoat --type repo --output iac.json --format json'    
 
   - task: CmdLine@2
     name: ScanDirectory
+    env:
+      VERACODE_API_KEY_ID: $(VERACODE_ID)
+      VERACODE_API_KEY_SECRET: $(VERACODE_SECRET)
     inputs:
       script: './veracode scan --source insecure-test --type directory --output directory.json --format json'    
 
   - task: CmdLine@2
     name: MakeSbom
+    env:
+      VERACODE_API_KEY_ID: $(VERACODE_ID)
+      VERACODE_API_KEY_SECRET: $(VERACODE_SECRET)
     inputs:
       script: './veracode sbom --source https://github.com/veracode/verademo --type repo --output repo-sbom-cyclondx.json --format cyclonedx-json'    
+
+  - task: PublishBuildArtifacts@1
+    condition:
+        succeededOrFailed()
+    inputs:
+      pathToPublish: 'scan-verademo.json'
+      artifactName: container-results
+
+  - task: PublishBuildArtifacts@1
+    condition:
+        succeededOrFailed()
+    inputs:
+      pathToPublish: 'iac.json'
+      artifactName: container-results
+
+  - task: PublishBuildArtifacts@1
+    condition:
+        succeededOrFailed()
+    inputs:
+      pathToPublish: 'directory.json'
+      artifactName: container-results
+
+  - task: PublishBuildArtifacts@1
+    condition:
+        succeededOrFailed()
+    inputs:
+      pathToPublish: 'repo-sbom-cyclondx.json'
+      artifactName: container-results
 
