--- a/contariner-scan-ado.yml
+++ b/contariner-scan-ado.yml
@@ -42,7 +42,7 @@ steps:
       VERACODE_API_KEY_ID: $(VERACODE_ID)
       VERACODE_API_KEY_SECRET: $(VERACODE_SECRET)
     inputs:
-      script: './veracode scan --source insecure-test --type directory --output directory.json --format json'    
+      script: './veracode scan --source ./ --type directory --output directory.json --format json'    
 
   - task: CmdLine@2
     name: MakeSbom
